--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,7 @@
       </div>
       <nav class="nav">
         <a href="index.html">Главная</a>
-        <a href="#">Компании</a>
+        <a href="companies.html">Компании</a>
         <a href="#">Категории</a>
         <a href="#">Блог</a>
         <a href="#">Контакты</a>
