--- a/css/main.css
+++ b/css/main.css
@@ -877,15 +877,20 @@ body {
     font-size: 15px;
   }
 }
-.iti {
+.iti-container {
   position: relative;
 }
 .iti__country-list {
   z-index: 10000;
   color: #5f5e5e;
+  max-width: 320px;
 }
 .iti__selected-dial-code {
   color: #999;
+}
+.iti--container {
+  top: 50px !important;
+  left: 0 !important;
 }
 .sidebar-card {
   background: white;
